# MusicAgent

./: .gitignore  CLAUDE.md  DEPLOY.md  DEPLOY_GATEWAY_NGINX.md  README.md  dev.ps1  index.html  manifest.webmanifest  sw.js  vercel.json
.claude/: settings.local.json
assets/: index-C5SUQrSJ.js  index-D4z5Q_ie.js  index-DkiV9LWx.css  index-DpJGVJBe.js
backend/: pyproject.toml
backend/app/: __init__.py  main.py
backend/app/routes/: __init__.py  chord.py
backend/app/schemas/: chord.py
backend/app/services/: chord.py
backend/music_agent_backend.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
docs/: samples-download-guide.md
frontend/: .env.example  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx  styles.css
frontend/src/components/: ChordForm.tsx  ChordPicker.tsx  ChordProgression.tsx  HeaderBar.tsx  Metronome.tsx  PianoKeyboard.tsx  ResultPanel.tsx  SampleCachePanel.tsx
frontend/src/lib/: api.ts  basePath.ts  chordLocal.ts  chordProgressions.ts  chordTypes.ts  player.ts
mkcert/: 192.168.20.197+3-key.pem  192.168.20.197+3.pem
scripts/: README.md  deploy.gateway.ps1  deploy.gateway.sh  download-samples.js  download-samples.ps1  download-samples.sh
