# Managed with uv; run `uv sync` to install dependencies.
[project]
name = "music-agent-backend"
version = "0.1.0"
description = "Chord parsing and keyboard highlight API for MusicAgent"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.7.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.2.0"]

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

